--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
           <p class="text-gray-600">Système de suivi et gestion des stocks.</p>
           <a href="#" class="text-blue-600 font-semibold">Voir le projet</a>
         </div>
+        <div class="bg-white p-4 rounded-lg shadow-md">
+            <h3 class="text-xl font-semibold">Gestion de Scolarité</h3>
+            <p class="text-gray-600">Plateforme de gestion d'une école en ligne.</p>
+            <a href="#" class="text-blue-600 font-semibold">Voir le projet</a>
+          </div>
       </div>
     </div>
   </section>
